      (RFE #1370874).
    * sql.php: Show results of REPLACE as affected as it contains both deleted
      and inserted rows count (bug #1475765).
    * libraries/common.lib.php: Better detection of duplicate rows (bug
      #1477500).
    * libraries/display_tbl.lib.php: Do not check for VIEW if no table name
      (eg. SELECT 1) (bug #1473484).

2006-04-26 Michal Čihař  <michal@cihar.com>
    * libraries/plugin_interface.lib.php:
        - Display information that there are no settings.
        - Be more verbose on error.
        - Drop tables used for layout.
        - Add support for groupping options.
        - Support for forcing one of two bool/bgroups.
        - Add documentation.
        - Support for localised texts in defaults.
    * css/phpmyadmin.css.php, themes/darkblue_orange/css/theme_right.css.php,
      themes/original/css/theme_right.css.php: New style for non table forms
      used in plugins.
    * libraries/config.default.php, libraries/display_export.lib.php,
      libraries/export/*: Convert export to plugin architecture, so that
      plugins are independant piece of code (RFE #1325937).
    * db_operations.php, tbl_properties_operations.php,
      libraries/Table.class.php: Adapt to changes in export.
    * export.php, libraries/export/*: Use plugins for extension and MIME type.
    * libraries/export/ods.php, libraries/opendocument.lib.php,
      libraries/config.default.php, lang/*: Export to OASIS OpenDocument
      Spreadsheet (RFE #1068007).
    * lang/czech: Update.
    * export.php, libraries/plugin_interface.lib.php, libraries/export/*:
      Allow forcing of export to file, it makes no sense to display PDF in
      textarea ;-).
    * libraries/display_export.lib.php: Reinclude table selection (bug
      #1477226).
    * libraries/auth/cookie.auth.lib.php: Remove unused function.
    * libraries/auth/cookie.auth.lib.php, Documentation.html,
      libraries/config.default.php: Allow configuration of cookie storage on