@@ -19,6 +19,8 @@ $Source$
       #1477500).
     * libraries/display_tbl.lib.php: Do not check for VIEW if no table name
       (eg. SELECT 1) (bug #1473484).
+    * libraries/import/sql.php: Do not strip MySQL conditional statements in
+      comments (patch #1459782, thanks to unconed - unconed).
 
 2006-04-26 Michal Čihař  <michal@cihar.com>
     * libraries/plugin_interface.lib.php:
